# gemini-env

./: .gitignore  GEMINI_EVOLVE.md  GEMINI_EVOLVE_CIRCLE.md  justfile  prompt-engineer.skill  pyproject.toml  tool-response-check.skill
.gemini/commands/: evolve.toml
.gemini/skills/evolutionary-optimization-expert/: SKILL.md
.gemini/skills/shinka-expert/: SKILL.md
.gemini/skills/tool-response-check/: SKILL.md
circle_packing/: .gitignore  GEMINI.md  PROBLEM.md  README.md  evaluate.py  initial.py  pyproject.toml  simple_baseline.py  visualize_best.py
circle_packing_elite/: best_20260314.py  best_solution.py  evaluate_and_visualize_elite.py
circle_packing_elite_v2/: best_solution.py  super_parent_valid.npz
extensions/code-evolution/: gemini-extension.json
extensions/code-evolution/commands/: evolve.toml
extensions/code-evolution/skills/evolutionary-optimization-expert/: SKILL.md
extensions/toolbox/: gemini-extension.json
extensions/toolbox/skills/code-similarity/: SKILL.md
extensions/toolbox/skills/prompt-engineer/: SKILL.md
games_2048/: PROBLEM.md  animate.py  evaluate.py
prompt_optimization/: PROBLEM.md  evaluate.py  ground_truth.jsonl  initial.py  input.txt  pyproject.toml
traveling-salesman/: PROBLEM.md  evaluate.py  initial.py  visualize_best.py
traveling-salesman/initial_results/: metrics.json
