[project]
name = "gemini-env"
version = "0.1.0"
description = "Gemini Environment for Code Evolution"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "imageio>=2.31.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.2.0",
    "seaborn>=0.13.0",
    "opencv-python>=4.8.0",
]

[tool.uv]
managed = true
